# mypowheg

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
powheggen/: CMakeLists.txt  eventgenerator.cpp  eventgenerator.h  integraltransformation.h  phasespacegenerator.h  run.h
processes/drell-yan-ew/: CMakeLists.txt  config.h  cuts.cpp  cuts.h  data.cpp  genbornps.cpp  genbornps.h  main.cpp  matrixelement.cpp  myhistograms.h  powheg.cpp  processes.cpp  processes.h  processlist.h  run.h  scales.h  zdata.cpp  zdata.h
processes/drell-yan-ew/me/: CMakeLists.txt  ddx_mupmuma.cpp  ddx_mupmuma.h  ddx_mupmuma_test.cpp  ddx_mupmumg.cpp  ddx_mupmumg.h  ddx_mupmumg_test.cpp  gd_mupmumd.cpp  gd_mupmumd.h  gd_mupmumd_test.cpp  gdx_mupmumdx.cpp  gdx_mupmumdx.h  gdx_mupmumdx_test.cpp  gu_mupmumu.cpp  gu_mupmumu.h  gu_mupmumu_test.cpp  gux_mupmumux.cpp  gux_mupmumux.h  gux_mupmumux_test.cpp  parameters_sm.cpp  parameters_sm.h  uux_mupmuma.cpp  uux_mupmuma.h  uux_mupmuma_test.cpp  uux_mupmumg.cpp  uux_mupmumg.h  uux_mupmumg_test.cpp  virtual_qed.cpp  virtual_qed.h  virtual_qed_test.cpp
processes/drell-yan-ew/me/VirtualQED/: CMakeLists.txt  abbrampsfacctEWphotonicISR2.F  abbrampsfacctQCD1.F  abbrborn1.F  abbrborn2.F  abbrvirtEWnonphotonic1.F  abbrvirtEWnonphotonic2.F  abbrvirtEWphotonicFSR1.F  abbrvirtEWphotonicFSR2.F  abbrvirtEWphotonicINT1.F  abbrvirtEWphotonicINT2.F  abbrvirtEWphotonicISR1.F  ampsfacctEWphotonicFSR1.F  ampsfacctEWphotonicFSR2.F  ampsfacctEWphotonicISR1.F  born1.F  params.h  virtEWnonphotonic1.F  virtEWphotonicFSR1.F  virtEWphotonicISR1.F  virtEWphotonicISR2.F
processes/w/: CMakeLists.txt  bornpsgenerator.h  breitwignermapping.h  config.txt  cuts.cpp  cuts.h  main.cpp  matrixelement.cpp  matrixelement.h  myhistograms.h  scales.h  wdata.cpp  wdata.h
processes/w/me/: CMakeLists.txt  parameters_sm.cpp  parameters_sm.h  virtual.cpp  virtual.h  virtual_test.cpp  wa.cpp  wa.h  wa_test.cpp  wg.cpp  wg.h  wg_test.cpp  wq.cpp  wq.h  wq_test.cpp  wqx.cpp  wqx.h  wqx_test.cpp
processes/w/me/virtual/: CMakeLists.txt  abbrampsfacctEW1.F  abbrampsfacctQCD1.F  abbrborn1.F  abbrconst.F  abbrrealQED1.F  abbrrealQED2.F  abbrrealQED3.F  abbrrealQED4.F  abbrrealQED5.F  abbrrealQED6.F  abbrvirtEW1.F  abbrvirtQCD1.F  ampsfacctEW1.F  ampsfacctQCD1.F  (+16 more)
processes/wj/: CMakeLists.txt  breitwignermapping.h  cuts.cpp  cuts.h  debug_integrand.cpp  genps_for_tests.cpp  main.cpp  matrixelement.cpp  matrixelement.h  myhistograms.h  phasespace.cpp  phasespace.h  phasespace_test.cpp  scales.h  wjdata.cpp  wjdata.h
processes/wj/me/: CMakeLists.txt  ddx_dux.cpp  ddx_dux.h  ddx_dux_test.cpp  dxdx_uxdx.cpp  dxdx_uxdx.h  dxdx_uxdx_test.cpp  ffv1p0_3.h  gdx_gux.cpp  gdx_gux.h  gdx_gux_test.cpp  gdx_uxa.cpp  gdx_uxa.h  gdx_uxa_test.cpp  gg_dux.cpp  gg_dux.h  gg_dux_test.cpp  gu_da.cpp  gu_da.h  gu_da_test.cpp  gu_gd.cpp  gu_gd.h  gu_gd_test.cpp  parameters_sm.cpp  parameters_sm.h  uc_us.cpp  uc_us.h  uc_us_test.cpp  ucx_dcx.cpp  ucx_dcx.h  ucx_dcx_test.cpp  ud_dd.cpp  ud_dd.h  ud_dd_test.cpp  udx_ccx.cpp  udx_ccx.h  udx_ccx_test.cpp  udx_ddx.cpp  udx_ddx.h  udx_ddx_test.cpp  (+40 more)
processes/z/: CMakeLists.txt  bornpsgenerator.h  breitwignermapping.h  config.txt  cuts.cpp  cuts.h  main.cpp  matrixelement.h  zdata.cpp  zdata.h
processes/z/me/: CMakeLists.txt  ddx_mupmuma.cpp  ddx_mupmuma.h  ddx_mupmuma_test.cpp  ddx_mupmumg.cpp  ddx_mupmumg.h  ddx_mupmumg_test.cpp  gd_mupmumd.cpp  gd_mupmumd.h  gd_mupmumd_test.cpp  gdx_mupmumdx.cpp  gdx_mupmumdx.h  gdx_mupmumdx_test.cpp  gu_mupmumu.cpp  gu_mupmumu.h  gu_mupmumu_test.cpp  gux_mupmumux.cpp  gux_mupmumux.h  gux_mupmumux_test.cpp  parameters_sm.cpp  parameters_sm.h  tmp_limitcalc_test.cpp  uux_mupmuma.cpp  uux_mupmuma.h  uux_mupmuma_test.cpp  uux_mupmumg.cpp  uux_mupmumg.h  uux_mupmumg_test.cpp  virtual_qed.cpp  virtual_qed.h  virtual_qed_test.cpp
src/: CMakeLists.txt  doc.cpp  libconfig.h.in
src/config/: CMakeLists.txt  file.cpp  file.h  file_test.cpp
src/fks/: CMakeLists.txt  color.h  constants.h  doc.cpp  fks_g.cpp  fks_g.h  histlist.h  limits.cpp  limits.h  limits_test.cpp  luminosity.cpp  luminosity.h  param.h  phasespaces.cpp  phasespaces.h  process.cpp  process.h  radiationregion.cpp  radiationregion.h  regions.h  remnants.cpp  remnants.h  scales.h  sfunctions.cpp  sfunctions.h  sfunctions_test.cpp  splitting.cpp  splitting.h  subtraction.cpp  subtraction.h  virtual.cpp  virtual.h  virtual_test.cpp  wjlimits.cpp  ximax.cpp  ximax.h  ximax_test.cpp  xsec.cpp  xsec.h
src/lhe/: CMakeLists.txt  event.h  eventbuffer.cpp  eventbuffer.h  lhefile.cpp  lhefile.h
src/math/: CMakeLists.txt  dilog.h  dilog_test.cpp  doc.cpp  fourmomentum.cpp  fourmomentum.h  fourmomentum_test.cpp  math.h  util.cpp  util.h  util_test.cpp
src/pdf/: CMakeLists.txt  lhapdf.h  pdfcache.h  pdfinterface.h
src/phasespace/: CMakeLists.txt  doc.cpp  internal.h  phasespace.h  phasespace_test.cpp  realphasespace.cpp  realphasespace.h  realphasespace_test.cpp  recombination.cpp  recombination.h  twoparticlegenerator.cpp  twoparticlegenerator.h  twoparticlegenerator_test.cpp
src/physics/: CMakeLists.txt  alphas.cpp  alphas.h  doc.cpp  pdgcode.cpp  pdgcode.h  pdgcode_test.cpp
src/powheg/: CMakeLists.txt  alphas.h  btilde.cpp  btilde.h  color.cpp  color.h  color_test.cpp  findnorm.h  fsr.h  generateevents.cpp  generateevents.h  generateradiation.cpp  generateradiation.h  isr.h  pickelement.cpp  pickelement.h  ptgenerator.h  qcdfsr.h  qcdisr.h  qedfsr.h  qedisr.h  radiationgenerator.h  reshuffle_momenta.cpp  reshuffle_momenta.h  resonance.h  roverb.cpp  roverb.h  solverqcdisr.h  solverqedisr.h  unweighting.cpp  unweighting.h  upperbounding.cpp  upperbounding.h
src/process/: CMakeLists.txt  cuts.h  data.cpp  data.h  histograms.h  matrixelement.h
src/random/: CMakeLists.txt  rnd.cpp  rnd.h
src/util/: CMakeLists.txt  byte.h  databuffer.cpp  databuffer.h  doc.cpp  histogram.cpp  histogram.h  histogram_test.cpp  matrix.h  matrix_test.cpp  staticmatrix.h  stringutil.cpp  stringutil.h  stringutil_test.cpp
vegas/: CMakeLists.txt  vegas.h  vegas_mpi.c  vegas_test.cpp
(+156 files in other folders)
